--- a/index.html
+++ b/index.html
@@ -699,6 +699,20 @@
                                 <div class="timeline-body">
                                     <div class="skill-holder timeline-item">
 
+                                        <div class="event-content timeline-content left">
+                                            <p>
+                                                Built several applications using ReactJS.
+                                                <br> <br>
+                                            </p>
+                                        </div>
+
+                                        <div class="skill-item right">
+                                            <div class="skill"  data-text="82%" data-info="ReactJS"   data-percent="82"   data-fill="#272425"></div>
+                                        </div>
+
+                                    </div>
+                                    <div class="skill-holder timeline-item">
+
                                         <div class="skill-item left">
                                             <div class="skill"  data-text="73%" data-info="MongoDB"   data-percent="73"   data-fill="#272425"></div>
                                         </div>
@@ -721,7 +735,7 @@
                                         </div>
 
                                         <div class="skill-item right">
-                                            <div class="skill"  data-text="70%" data-info="METEORJS"   data-percent="73"   data-fill="#272425"></div>
+                                            <div class="skill"  data-text="70%" data-info="MeteorJS"   data-percent="73"   data-fill="#272425"></div>
                                         </div>
 
                                     </div>
