--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.4s">
                                             <i class="fa fa-desktop"></i>
-                                            <span>NodeJS</span>
+                                            <span>ReactJS</span>
                                         </li>
                                     </ul>
                                 </div>
