adds respond and buffer reply

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                                         </div>
                                         <div class="profile-content timeline-content right">
                                             <label>Experience</label>
-                                            <div class="value">9+ years</div>
+                                            <div class="value">10+ years</div>
                                         </div>
 
                                     </div>
@@ -348,7 +348,7 @@
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.8s">
                                             <i class="fa fa-codepen"></i>
-                                            <span>PHP</span>
+                                            <span>C#</span>
                                         </li>
                                     </ul>
                                 </div>
@@ -359,6 +359,10 @@
                                 </div>
                                 <div class="interests-row big">
                                     <ul>
+                                        <li class="wow bounceInDown" data-wow-delay="0.4s">
+                                            <i class="fa fa-desktop"></i>
+                                            <span>ReactJS</span>
+                                        </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.1s">
                                             <i class="fa fa-bug"></i>
                                             <span>AngularJS</span>
@@ -370,10 +374,6 @@
                                         <li class="wow bounceInDown" data-wow-delay="0.3s">
                                             <i class="fa fa-database"></i>
                                             <span>MongoDB</span>
-                                        </li>
-                                        <li class="wow bounceInDown" data-wow-delay="0.4s">
-                                            <i class="fa fa-desktop"></i>
-                                            <span>ReactJS</span>
                                         </li>
                                     </ul>
                                 </div>
@@ -390,7 +390,7 @@
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.7s">
                                             <i class="fa fa-git"></i>
-                                            <span>Git</span>
+                                            <span>git</span>
                                         </li>
                                         <li class="wow bounceInDown" data-wow-delay="0.8s">
                                             <i class="fa fa-bitcoin"></i>
@@ -429,12 +429,51 @@
 
                                         <div class="event-content timeline-content left">
                                             <p>
-                                                Developing applications such as the Optimal Timing Tool, Salary App, Buffer home pages (PHP, MongoDB, BackboneJS, ReactJS, gulp, grunt...). Participating in the development of the Buffer Web app. Rearchitecting and developing <a href="https://respond.buffer.com" target="_blank">Respond app</a> (MeteorJS, CoffeeScript, AWS).
+                                                Architecting and developing Buffer Reply client application using React, Redux, RxJS and backend services.
                                             </p>
                                         </div>
 
                                         <div class="event-title right">
-                                            <h1>Full-Stack Developer</h1>
+                                            <h1>Senior Software Engineer</h1>
+                                            <h4>Buffer Inc.<small>2017-PRESENT</small></h4>
+                                        </div>
+
+                                    </div>
+
+                                    <div class="event-item timeline-item">
+
+                                        <div class="event-title left">
+                                            <h1>Co-founder / Full-stack Developer</h1>
+                                            <h4>Respond <small>2016-2017</small></h4>
+                                        </div>
+
+
+                                        <div class="event-content timeline-content right">
+                                            <p>
+                                               Maintained and developed an existing MeteorJS application (backend and frontend). Rebuilt the client in React, collaborating with the backend team. Worked on
+                                                all aspects of the project, from customer support and marketing to sales and development.
+
+                                            </p>
+                                        </div>
+
+                                    </div>
+
+
+
+
+
+
+                                    <div class="event-item timeline-item">
+
+                                        <div class="event-content timeline-content left">
+                                            <p>
+                                                Built Optimal Timing Tool, Salary App, Buffer home pages (PHP, MongoDB, BackboneJS, ReactJS, gulp, grunt...). Participated
+                                                in the development of the Buffer Web app and Pablo.
+                                            </p>
+                                        </div>
+
+                                        <div class="event-title right">
+                                            <h1>Front-end Developer</h1>
                                             <h4>Buffer Inc.<small>2015-PRESENT</small></h4>
                                         </div>
 
@@ -443,7 +482,7 @@
                                     <div class="event-item timeline-item">
 
                                         <div class="event-title left">
-                                            <h1>front-end developer</h1>
+                                            <h1>Front-end developer</h1>
                                             <h4>Symbiont <small>2015-PRESENT</small></h4>
                                         </div>
 
