typo fix and profile image change

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <div class="head-image bg-image" data-bg-image="assets/images/background-image.png">
                 <div class="avatar wow bounceInDown" >
-                    <img alt="avatar" src="assets/images/ivana.png" />
+                    <img alt="avatar" src="assets/images/Ivana-Photo.png" />
                 </div>
             </div>
 
@@ -139,7 +139,7 @@
                 <div class="content">
                     <h1>Ivana Zuber</h1>
                     <div class="short-tag">
-                        full-stack developer
+                        Senior Software Engineer
                     </div>
                 </div>
             </div>
@@ -819,7 +819,7 @@
 
                                         <div class="event-content timeline-content right">
                                             <p>
-                                                After coding in #C and XAML for over 4 years I developed a passion for JavaScript.
+                                                After coding in C# and XAML for over 4 years I developed a passion for JavaScript.
                                             </p>
                                         </div>
 
