--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
                                     <div class="event-item timeline-item">
 
                                         <div class="event-title left">
-                                            <h1>Software Engineer</h1>
+                                            <h1>Senior Software Engineer</h1>
                                             <h4>Reply <small>2016-2017</small></h4>
                                             <h5><a href="https://buffer.com/reply" target="_blank">reply.com</a></h5>
                                         </div>
