--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="content">
                     <h1>Ivana Zuber</h1>
                     <div class="short-tag">
-                        Frontend Lead / Head of Engineering
+                        Frontend Lead @buffer, Head Engineering @tiimis
                     </div>
                 </div>
             </div>
