--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                         <div class="col-xs-12 col-md-7">
                             <div class="le-paragraph">
                                 <p><strong>Hey there 👋!</strong></p>
-                                <p>Thanks so much for dropping by :)!</p>
-                                <p>I'm Ivana and, among other things, I love architecting, designing, building and leading the development of web applications :-). </p>
+                                <p>Thanks for dropping by!</p>
+                                <p>I'm Ivana and, among other things, I love architecting, designing, and managing the development of modern and innovative software solutions. </p>
                                 <p>If you're curious what I've been
-                                up to for the last 12 years, feel free to browse through the site, check out my latest posts and projects, and if you come up with an awesome new challenge for me, be sure to give me a buzz :D !
+                                up to for the last 12 years, feel free to browse through the site, check out my latest posts and projects, and if you come up with an awesome new challenge for me, be sure to give me a buzz ;) !
                                 </p>
                             </div>
                         </div>
