--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <div class="head-image bg-image" data-bg-image="assets/images/background-image.png">
                 <div class="avatar wow bounceInDown" >
-                    <img alt="avatar" src="https://pbs.twimg.com/profile_images/993044566352846848/nmkb2oEt_400x400.jpg" style="width: 100%" />
+                    <img alt="avatar" src="assets/images/IMG_6741.JPG" style="width: 100%" />
                 </div>
             </div>
 
@@ -148,7 +148,7 @@
                 <div class="content">
                     <h1>Ivana Zuber</h1>
                     <div class="short-tag">
-                        Frontend Lead @buffer, Head Engineering @tiimis
+                        Engineering Manager, Team Lead @buffer, Co-founder @tiimis
                     </div>
                 </div>
             </div>
@@ -159,7 +159,7 @@
                             <div class="le-paragraph">
                                 <p><strong>Hey there 👋!</strong></p>
                                 <p>Thanks for dropping by!</p>
-                                <p>I'm Ivana and, among other things, I love architecting, designing, and managing the development of modern and innovative software solutions. </p>
+                                <p>I'm Ivana and, among other things, I love building and supporting successful, diverse, remote teams and developing fun and innovative software solutions. </p>
                                 <p>If you're curious what I've been
                                 up to for the last 12 years, feel free to browse through the site, check out my latest posts and projects, and if you come up with an awesome new challenge for me, be sure to give me a buzz ;) !
                                 </p>
@@ -434,6 +434,37 @@
                                     </div>
                                 </div>
                                 <div class="timeline-body">
+
+                                    <div class="event-item timeline-item">
+                                        <div class="event-content timeline-content left">
+                                            <p>
+                                                ♣ Leading the Analyze and Marketing Engineering teams
+                                            </p>
+                                            <p>
+                                                ♣ Translating engineering team vision and technical roadmap into action
+                                            </p>
+                                            <p>
+                                                ♣ Hiring and on-boarding new engineers
+                                            </p>
+                                            <p>
+                                                ♣ Leading the Buffer Design System team
+                                            </p>
+                                            <p>
+                                                ♣ Leading the development of the new Style Guide and UI documentation app
+                                            </p>
+                                        </div>
+
+                                        <div class="event-title right">
+                                            <h1>Engineering Manager</h1>
+                                            <h4>Buffer Inc. <small>2019-present</small></h4>
+                                        </div>
+
+
+
+
+                                    </div>
+
+
                                     <div class="event-item timeline-item">
 
                                         <div class="event-title left">
@@ -488,7 +519,7 @@
 
                                         <div class="event-title right">
                                             <h1>Frontend Lead</h1>
-                                            <h4>Buffer Inc. <small>2018-present</small></h4>
+                                            <h4>Buffer Inc. <small>2018-2019</small></h4>
                                         </div>
 
 
