--- a/index.html
+++ b/index.html
@@ -1264,7 +1264,7 @@
                                     </figure>
 
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development illustration">
-                                        <a data-rel="prettyphoto" href="assets/images/portfolio/Tagmatic6.PNG">
+                                        <a data-rel="prettyphoto" href="assets/images/bds.png">
                                             <img alt="" src="assets/images/bds.png"   />
                                         </a>
                                         <div class="holder">
@@ -1288,7 +1288,7 @@
 
 
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development illustration">
-                                        <a data-rel="prettyphoto" href="assets/images/portfolio/Tagmatic6.PNG">
+                                        <a data-rel="prettyphoto" href="assets/images/screenshot-reply@2x.jpeg">
                                             <img alt="" src="assets/images/screenshot-reply@2x.jpeg"   />
                                         </a>
                                         <div class="holder">
@@ -1311,7 +1311,7 @@
                                     </figure>
 
                                     <figure class="col-xs-12 col-sm-6 col-md-4 portfolio-item development illustration">
-                                        <a data-rel="prettyphoto" href="assets/images/portfolio/Tagmatic6.PNG">
+                                        <a data-rel="prettyphoto" href="assets/images/buffer-analyze-dashboard@2x-v3.jpg">
                                             <img alt="" src="assets/images/buffer-analyze-dashboard@2x-v3.jpg"   />
                                         </a>
                                         <div class="holder">
