--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="content">
                     <h1>Ivana Zuber</h1>
                     <div class="short-tag">
-                        Engineering Manager @buffer, Founder @tiimis
+                        Engineering Manager @buffer
                     </div>
                 </div>
             </div>
@@ -435,7 +435,7 @@
 
                                         <div class="event-title left">
                                             <h1>Founder & Head of Engineering</h1>
-                                            <h4>Tiimis <small>2017-present</small></h4>
+                                            <h4>Tiimis <small>2017-2019</small></h4>
                                         </div>
 
 
