--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="content">
                     <h1>Ivana Zuber</h1>
                     <div class="short-tag">
-                        Engineering Manager @buffer
+                        Remote Engineering and Team Leader
                     </div>
                 </div>
             </div>
@@ -400,6 +400,37 @@
                                     </div>
                                 </div>
                                 <div class="timeline-body">
+                                    
+                                     <div class="event-item timeline-item">
+
+                                        <div class="event-title left">
+                                            <h1>CEO & Co-founder</h1>
+                                            <h4>Zoyya <small>2020-present</small></h4>
+                                        </div>
+
+
+                                        <div class="event-content timeline-content right">
+                                            <p>
+                                                ♣ Leading the development team, recruiting new engineers
+                                            </p>
+                                            <p>
+                                                ♣ Architecting, designing and building the web app client in React
+                                            </p>
+                                            <p>
+                                                ♣ Building backend api using ASP.NET, Entity Framework, Microsoft SQL Server
+                                            </p>
+                                            <p>
+                                                ♣ Organising, planning and preparing the sprints
+                                            </p>
+                                            <p>
+                                                ♣ Designing and building the project's marketing site https://tiimis.com
+                                            </p>
+                                            <p>
+                                                ♣ Building the desktop application using Electron
+                                            </p>
+                                        </div>
+
+                                    </div>
 
                                     <div class="event-item timeline-item">
                                         <div class="event-content timeline-content left">
@@ -422,7 +453,7 @@
 
                                         <div class="event-title right">
                                             <h1>Engineering Manager</h1>
-                                            <h4>Buffer Inc. <small>2018-present</small></h4>
+                                            <h4>Buffer Inc. <small>2018-2022</small></h4>
                                         </div>
 
 
