--- a/index.html
+++ b/index.html
@@ -411,23 +411,21 @@
 
                                         <div class="event-content timeline-content right">
                                             <p>
-                                                ♣ Leading the development team, recruiting new engineers
+                                                ♣ Building the first version of the product
                                             </p>
                                             <p>
-                                                ♣ Architecting, designing and building the web app client in React
+                                                ♣ Growing the company to 15 people
                                             </p>
                                             <p>
-                                                ♣ Building backend api using ASP.NET, Entity Framework, Microsoft SQL Server
+                                                ♣ Securing the first round of funding
                                             </p>
                                             <p>
-                                                ♣ Organising, planning and preparing the sprints
+                                                ♣ Growing the product to 15.000 users
                                             </p>
                                             <p>
-                                                ♣ Designing and building the project's marketing site https://tiimis.com
+                                                ♣ Got a reward for Top 10 Startups in CEE
                                             </p>
-                                            <p>
-                                                ♣ Building the desktop application using Electron
-                                            </p>
+                                          
                                         </div>
 
                                     </div>
