--- a/index.html
+++ b/index.html
@@ -154,9 +154,8 @@
                                 <p><strong>Hey there 👋!</strong></p>
                                 <p>Thanks for dropping by!</p>
                                 <p>I'm Ivana and, among other things, I love building and supporting successful, diverse, remote teams and developing fun and innovative software solutions. </p>
-                                <p>If you're curious what I've been
-                                up to for the last 15 years, feel free to browse through the site, check out my latest posts and projects, and if you come up with an awesome new challenge for me, be sure to give me a buzz ;) !
-                                </p>
+                                <p>I've been working remotely for the past 15 years and have had the privilege of helping scale several startups and engineering teams and develop career frameworks, mentorship programs, hire, mentor, coach, fire, lead through several company re-orgs and tough times.</p>
+                               
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-5">
@@ -433,7 +432,7 @@
                                     <div class="event-item timeline-item">
                                         <div class="event-content timeline-content left">
                                             <p>
-                                                ♣ Leading the Analyze and Marketing Engineering teams
+                                                ♣ Leading the Analyze, Growth and Marketing Engineering teams
                                             </p>
                                             <p>
                                                 ♣ Translating engineering team vision and technical roadmap into action
@@ -442,10 +441,10 @@
                                                 ♣ Hiring and on-boarding new engineers
                                             </p>
                                             <p>
-                                                ♣ Leading the Buffer Design System team
+                                                ♣ Growing, mentoring and coaching engineers
                                             </p>
                                             <p>
-                                                ♣ Leading the development of the new Style Guide and UI documentation app
+                                                ♣ Developing the Engineering Mentorship Program
                                             </p>
                                         </div>
 
